--- a/index.htm
+++ b/index.htm
@@ -57,6 +57,114 @@
                 </div>
             </div>
         </section>
+        <!-- What i do -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="what-i-do-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <!-- .skill-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla Javascript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas inventore repellat delectus, aliquam eum vitae.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Ipsum ipsa quasi eveniet animi voluptas illo, facere dolor similique officiis aliquam cumque aspernatur repellendus!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Illo facilis delectus tempora totam perferendis explicabo repellat quas praesentium eaque ea! Repellat, nemo non.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Ducimus dicta corrupti minus voluptates obcaecati laboriosam dolore molestiae doloribus veritatis veniam. Neque, illo minima.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summery of My Resume</h3>
+            <div class="reusme-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-institute">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-item-about">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-institute">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-item-about">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-institute">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-item-about">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item" >
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-institute">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-item-about">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-institute">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-item-about">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-institute">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-item-about">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
+        <!-- contact section -->
+        <section class="contact">
+            <div>
+                <h2 class="section-title">Let's Contact</h2>
+                <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+            </div>
+            <div class="message">
+                <h2 class="section-title">Let's Message me</h2>
+                <form action="">
+                    <input type="text" placeholder="Your name">
+                    <input type="text" placeholder="Your email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
 
