--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styless/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/22bccc4afc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -26,8 +27,8 @@
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="author-name">Mary Hardy</h1>
                 <p class="author-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-mobile"></i> Contact</button>
             </div>
             <div class="pic">
                 <img src="images/hardy.png" alt="">
@@ -137,7 +138,7 @@
                 </div>
             </div>
             <div class="resume-btn">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         <!-- contact section -->
